# openucs

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  openucs.cpp
blocks/: sounder_rx.yml
fpga/: CMakeLists.txt  Makefile.srcs
fpga/rfnoc_block_sounder_rx/: CMakeLists.txt  Makefile  Makefile.srcs  blk_avg.v  bram_mem.v  noc_shell_sounder_rx.v  rfnoc_block_sounder_rx.v  rfnoc_block_sounder_rx_tb.sv  sounder_rx.v
icores/: CMakeLists.txt  x410_rfnoc_image_core_avg.yml
include/: CMakeLists.txt  sounder_rx_block_control.hpp
lib/: CMakeLists.txt  sounder_rx_block_control.cpp
scripts/: plot.py  tx.py  xarray_test.ipynb
